[metadata]
name = grid-run
version = 0.0.1
author = pulkin
author_email = gpulkin@gmail.com
description = Distribute your HPC jobs seamlessly using a simple template language
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:

[options.entry_points]
console_scripts =
    grid=grid_run.__main__:dummy
